[gd_scene load_steps=3 format=3 uid="uid://ctrud0q2ultm6"]

[ext_resource type="Script" path="res://faction_info.gd" id="1_fdvh0"]
[ext_resource type="PackedScene" uid="uid://bhp206jav1nqd" path="res://inner_window.tscn" id="1_j7pfd"]

[node name="FactionInfo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fdvh0")

[node name="InnerWindow" parent="." instance=ExtResource("1_j7pfd")]
layout_mode = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="ResearchLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "RESEARCH:"

[node name="BoldnessLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "BOLDNESS:"

[node name="WealthLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "WEALTH:"

[node name="RichTextLabel" type="RichTextLabel" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="BuildupLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "BUILDUP:"
